@@ -1,0 +1,3 @@
+setMode -bs
+setCable -port auto
+Identify -inferir
