@@ -1,0 +1,5 @@
+setMode -bs
+setCable -port auto
+Identify -inferir
+assignFile -p [POSITION] -file "[BITSTREAM]"
+Program -p [POSITION]
