@@ -1,0 +1,6 @@
+setMode -bs
+setCable -port auto
+Identify
+attachflash -position [POSITION] -spi "[MEMNAME]"
+assignfiletoattachedflash -position [POSITION] -file "[MCSFILE]"
+Program -p [POSITION] -dataWidth [WIDTH] -spionly -e -v -loadfpga
