@@ -17,7 +17,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-import argparse, yaml, os, sys, platform
+import argparse, yaml, os, sys
 
 lib_dir   = os.path.dirname(os.path.abspath(__file__)) + '/../helpers'
 share_dir = os.path.dirname(os.path.abspath(__file__)) + '/..'
@@ -28,21 +28,6 @@ if not os.path.exists(share_dir + '/data'):
 
 sys.path.insert(0, lib_dir)
 from fpga_lib import *
-
-## Functions ##################################################################
-
-def getTextProg(options, template):
-    name = os.path.basename(options.bit)
-    name = os.path.splitext(name)[0]
-    text = file(template, 'r').read()
-    text = text.replace('[BITSTREAM]' , str(options.bit))
-    text = text.replace('[MCSFILE]'   , str(options.output_dir + '/' + name + '.mcs'))
-    text = text.replace('[MEMNAME]'   , str(options.memname))
-    text = text.replace('[NAME]'      , str(name))
-    text = text.replace('[PATH]'      , str(options.output_dir))
-    text = text.replace('[POSITION]'  , str(options.position))
-    text = text.replace('[WIDTH]'     , str(options.width))
-    return text
 
 ## Parsing the command line ###################################################
 
@@ -57,22 +42,21 @@ parser = argparse.ArgumentParser(
 )
 
 parser.add_argument(
-   'bit',
-   metavar='FILE.bit',
-   nargs='?',
-   default='top.bit',
-   help='BitStream to be transferred [top.bit]'
-)
-parser.add_argument(
    '-v', '--version',
    action='version',
    version=version
 )
 parser.add_argument(
-   '--output-dir',
-   metavar='PATH',
-   default='temp',
-   help='PATH to where to put temporary files [temp]'
+   'bit',
+   metavar='FILE.bit',
+   help='BitStream to be transferred'
+)
+parser.add_argument(
+   '-t', '--tool',
+   metavar='NAME',
+   default=None,
+   choices=['ise'],
+   help='NAME of the vendor tool to be used [ise]'
 )
 
 devices = parser.add_argument_group('device arguments')
@@ -81,7 +65,7 @@ devices.add_argument(
    metavar='TYPE',
    default='fpga',
    choices=['fpga', 'spi', 'bpi', 'xcf', 'detect', 'unlock'],
-   help='TYPE of the target device [fpga]'
+   help='TYPE of the target device [fpga(default)|spi|bpi|xcf|detect|unlock]'
 )
 devices.add_argument(
    '-p', '--position',
@@ -114,28 +98,8 @@ devices.add_argument(
         'overwritten) []'
 )
 
-vtool = parser.add_argument_group('vendor tool arguments')
-vtool.add_argument(
-   '-t', '--tool',
-   metavar='NAME',
-   default=None,
-   choices=['ise'],
-   help='NAME of the vendor tool to be used [ise]'
-)
-vtool.add_argument(
-   '--tool-dir',
-   metavar='PATH',
-   help="PATH to the root directory of the vendor tool [vendor dependant]"
-)
-vtool.add_argument(
-   '-r', '--run',
-   metavar='MODE',
-   default='batch',
-   choices=['batch', 'gui', 'no'],
-   help='MODE to run the tool [batch]'
-)
-
 options = parser.parse_args()
+options.output_dir = '/tmp/fpga_prog'
 
 ## Processing the options #####################################################
 
@@ -150,6 +114,11 @@ if options.board is not None:
       board = yaml.load(file(path, 'r'))
    else:
       sys.exit(__file__ + '(ERROR): board <' + options.board + '> not exists.')
+   if not options.tool in board['tool']['prog']:
+      sys.exit(
+         __file__ + '(ERROR): <board> ' + options.board +
+         ' is not supported by the <tool> ' + options.tool + '.'
+      )
    if options.device not in board:
       sys.exit(__file__ + '(ERROR): the device <' + options.device + '> is not ' +
                           'supported in the board <' + options.board + '>.')
@@ -169,21 +138,15 @@ if options.board is not None:
 if options.tool is None:
    options.tool = 'ise'
 
-options.tool_dir = getToolDir(options)
-print (__file__ + '(INFO): root tool path is <' + options.tool_dir + '>.')
-
-options.output_dir += '/fpga_prog'
 if not os.path.exists(options.output_dir):
    os.makedirs(options.output_dir)
    print (__file__ + '(INFO): <' + options.output_dir + '> was created.')
 
-## Creating batch file ########################################################
+## Creating batch file [when nedded] ##########################################
 
-text = '# Generated by ' + version + '\n'
-
-path = share_dir + '/templates/' + options.tool
 if options.tool == 'ise':
-   path += '/impact/'
+   text = ""
+   path = share_dir + '/data/tools/program/impact/'
    if options.device == 'fpga':
       text += getTextProg(options, path + 'fpga')
    if options.device == 'spi':
@@ -197,20 +160,17 @@ if options.tool == 'ise':
    if options.device == 'unlock':
       text += getTextProg(options, path + 'unlock')
    text += "quit\n"
-
-batch = options.output_dir + '/batch.cmd'
-file(batch, 'w').write(text)
-print (__file__ + '(INFO): <' + batch + '> was created.')
+   text += '# Generated by ' + version + '\n'
+   batch = options.output_dir + '/impact.cmd'
+   file(batch, 'w').write(text)
+   print (__file__ + '(INFO): <' + batch + '> was created.')
 
 ## Running the tool ###########################################################
 
-if options.run != 'no':
-   if options.tool == 'ise':
-      lib = "/usr/lib/libusb-driver.so";
-      if os.path.exists(lib):
-         os.environ['LD_PRELOAD'] = str(lib)
-         print (__file__ + '(INFO): <' + lib + '> exists.')
-      arch = platform.architecture()
-      command  = options.tool_dir + '/ISE/bin/lin' + arch[0][0:2] +'/impact'
-      command += ' -batch ' + batch if options.run == 'batch' else ''
-      os.system(command)
+if options.tool == 'ise':
+   lib = "/usr/lib/libusb-driver.so";
+   if os.path.exists(lib):
+      os.environ['LD_PRELOAD'] = str(lib)
+      print (__file__ + '(INFO): <' + lib + '> exists.')
+   command = 'impact -batch ' + batch
+   os.system(command)
