@@ -1,10 +1,12 @@
 v0.1.1:
 * Tcl script splitted (one per each vendor) and improved.
-* Added fpga_prepare.sh and fpga_make_syn.py.
+* Added fpga_prepare.sh, fpga_make_syn.py and fpga_prog.py.
   * fpga_prepare.sh: prepare the system to run vendor tools.
     * Allows configuration of paths and licenses.
-    * Supports Ise, Vivado, Quartus2 and Libero-SoC.
+    * Supports ISE, Vivado, Quartus2 and Libero-SoC.
   * fpga_make_syn.py: copy Tcl files and Makefile to the current directory.
+  * fpga_prog.py: transfer a bitstream.
+    * Supports ISE impact (transfer to fpga, spi, bpi and one xcf).
 
 v0.1.0:
 * Includes a Tcl script and Makefile to work with FPGA Tools in a Vendor Independent way.
